--- a/index.css
+++ b/index.css
@@ -1,3 +1,30 @@
+/* Color of the links BEFORE scroll */
+.navbar-scroll .nav-link,
+.navbar-scroll .navbar-toggler-icon {
+  color: #fff;
+}
+
+/* Color of the links AFTER scroll */
+.navbar-scrolled .nav-link,
+.navbar-scrolled .navbar-toggler-icon {
+  color: #4f4f4f;
+}
+
+/* Color of the navbar AFTER scroll */
+.navbar-scrolled {
+  background-color: #fff;
+}
+
+/* An optional height of the navbar AFTER scroll */
+.navbar.navbar-scroll.navbar-scrolled {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+
+
+
+
 
 .parent-container {
     display: flex;
@@ -17,7 +44,6 @@
 .align-side-icons{
     display : flex;
     flex-direction: column;
-    
     padding-top: 10px;
     padding-top: 300px;
     justify-content: flex-end;
