--- a/index.css
+++ b/index.css
@@ -35,16 +35,19 @@
     padding-top: 30px;
     justify-content: center;
     flex-wrap: wrap;
-    padding-left: 500px;
+    padding-left: 490px;
     width: 65%;
+    color: black;
 }
 
-.align-content .p {
+.para {
     align-self: center;
-    width: 25%;
-    padding-left: 200px;
+    
+    font-weight: 50;
     flex-wrap: wrap;
-    font-weight: 300;
+    color: grey;
+  
+
 }
 
 .align-bottom-icons {
@@ -93,9 +96,7 @@
     .align-side-icons {
         display: flex;
         flex-direction: column;
-
         padding-top: 20px;
-
         justify-content: flex-end;
         align-items: flex-end;
         right: 1px;
@@ -112,17 +113,18 @@
         align-items: center;
         padding-top: 30px;
         justify-content: center;
-        flex-wrap: wrap;
+        
         padding-left: 100px;
-        width: 85%;
+        width: 95%;
     }
 
-    .align-content .p {
+    .para {
         align-self: center;
-        width: 25%;
-        padding-left: 200px;
+        font-weight: 50;
         flex-wrap: wrap;
-        font-weight: 300;
+        color: grey;
+      
+    
     }
     .align-bottom-icons {
         display: flex;
@@ -172,7 +174,7 @@
         display: flex;
         flex-direction: column;
 
-        padding-top: 150px;
+        padding-top: 120px;
 
         justify-content: flex-end;
         align-items: flex-end;
@@ -190,17 +192,19 @@
         align-items: center;
         padding-top: 30px;
         justify-content: center;
-        flex-wrap: wrap;
+        
         padding-left: 100px;
-        width: 85%;
+        width: 95%;
     }
 
-    .align-content .p {
+    .para {
         align-self: center;
-        width: 25%;
-        padding-left: 200px;
+        
+        font-weight: 50;
         flex-wrap: wrap;
-        font-weight: 300;
+        color: grey;
+      
+    
     }
 
     .align-bottom-icons {
@@ -229,4 +233,86 @@
         width: 55px;
         height: 55px;
     }
+}
+
+@media (min-width: 800px) and (max-width: 1200px) {
+    .parent-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .img-div {
+        display: flex;
+    }
+
+    .img-home {
+        width: 100%;
+        object-fit: "contain";
+        position: relative;
+    }
+
+    .align-side-icons {
+        display: flex;
+        flex-direction: column;
+
+        padding-top: 220px;
+
+        justify-content: flex-end;
+        align-items: flex-end;
+        right: 1px;
+        position: absolute;
+    }
+
+    .header-options-align-right {
+        margin-left: auto;
+    }
+
+    .align-content {
+        display: flex;
+       
+        align-items: center;
+        padding-top: 30px;
+        justify-content: center;
+        
+        padding-left: 350px;
+       
+    }
+
+    .para {
+        align-self: center;
+        width: 80%;
+        font-weight: 50;
+        flex-wrap: wrap;
+        color: grey;
+    
+    }
+
+    .align-bottom-icons {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .align-bottom-icons .left {
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .align-bottom-icons .right {
+        display: flex;
+        justify-content: flex-end;
+        margin-left: auto;
+    }
+
+    .img-icon {
+        width: 50%;
+        height: 50%;
+        object-fit: contain;
+    }
+
+    .img-icon2 {
+        width: 55px;
+        height: 55px;
+    }
+
+
 }
