updated play icon img

--- a/index.css
+++ b/index.css
@@ -13,6 +13,16 @@
     position: relative;
 }
 
+.align-play-icon {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    position: absolute;
+    height: 100%; 
+    width: 100%;
+}
+
+
 .align-side-icons {
     display: flex;
     flex-direction: column;
@@ -93,6 +103,24 @@
         position: relative;
     }
 
+    .align-play-icon {
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        position: absolute;
+        height: 30%;
+        width: 100%;
+        
+    }
+
+    .align-play-icon .img-1{
+        height: 50%;
+    }
+
+    .align-play-icon .img-2{
+        height: 25%;
+    }
+
     .align-side-icons {
         display: flex;
         flex-direction: column;
@@ -168,6 +196,25 @@
         width: 100%;
         object-fit: "contain";
         position: relative;
+    }
+
+    .align-play-icon {
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        position: absolute;
+        height: 50%;
+        width: 100%;
+        padding-top: 80px;
+        
+    }
+
+    .align-play-icon .img-1{
+        height: 50%;
+    }
+
+    .align-play-icon .img-2{
+        height: 25%;
     }
 
     .align-side-icons {
