navbar with dark gradient

--- a/index.css
+++ b/index.css
@@ -1,8 +1,6 @@
-.nav {
+.navbar {
 
-    -webkit-box-shadow: 55px 10px 5px 0px rgb(17, 16, 17);
-    -moz-box-shadow: 55px 10px 5px 0px rgb(11, 11, 11);
-    box-shadow: 55px 10px 5px 0px rgb(21, 20, 21);
+    background: linear-gradient(90deg, rgba(15, 15, 14, 0.673) 0%, rgba(42, 41, 41, 0.486), rgba(8, 8, 8, 0.656));    ;
 }
 
 .parent-container {
@@ -60,9 +58,8 @@
     color: black;
 }
 
-.para {
+.align-content p {
     align-self: center;
-    
     font-weight: 50;
     flex-wrap: wrap;
     color: grey;
@@ -152,12 +149,11 @@
         align-items: center;
         padding-top: 30px;
         justify-content: center;
-        
         padding-left: 100px;
         width: 95%;
     }
 
-    .para {
+    .align-content p {
         align-self: center;
         font-weight: 50;
         flex-wrap: wrap;
@@ -255,15 +251,12 @@
         width: 95%;
     }
 
-    .para {
+    .align-content p {
         align-self: center;
-        
         font-weight: 50;
         flex-wrap: wrap;
         color: grey;
-      
-    
-    }
+      }
 
     .align-bottom-icons {
         display: flex;
@@ -346,22 +339,19 @@
 
     .align-content {
         display: flex;
-       
         align-items: center;
         padding-top: 30px;
         justify-content: center;
-        
         padding-left: 350px;
        
     }
 
-    .para {
+    .align-content p {
         align-self: center;
         width: 80%;
         font-weight: 50;
         flex-wrap: wrap;
         color: grey;
-    
     }
 
     .align-bottom-icons {
